--- a/src/components/widgets/Footer.astro
+++ b/src/components/widgets/Footer.astro
@@ -25,7 +25,7 @@ import { Icon } from 'astro-icon';
 					</ul>
 				</div>
 				<div>
-					<p class="mb-3 font-semibold uppercase text-white">Nossas redes</p>
+					<p class="mb-3 font-semibold uppercase text-white">A spacewiz</p>
 					<ul class="text-gray-400">
 						<li class="my-2">
 							<a class="hover:underline" href="#">Sobre Nós</a>
@@ -40,7 +40,7 @@ import { Icon } from 'astro-icon';
 				</div>
 				<div>
 					<p class="mb-3 text-sm font-semibold uppercase text-white">Redes Sociais</p>
-					<div class="flex gap-2">
+					<div class="flex flex-wrap gap-2">
 						<a href="https://www.instagram.com/spacewiz.dev/" class="text-gray-500 hover:text-white">
 							<Icon name="simple-icons:instagram" class="w-6 h-6" />
 							<span class="sr-only">Instagram</span>
@@ -89,7 +89,7 @@ import { Icon } from 'astro-icon';
 				<span class="text-light text-xs"
 					>Este é um projeto de código aberto, acesse <a
 						href="https://github.com/Space-Wizard-Studios/sw-site/"
-						class="hover:underline">o repositório</a
+						class="underline">o repositório</a
 					>!</span
 				>
 			</p>
