--- a/src/components/widgets/Header.astro
+++ b/src/components/widgets/Header.astro
@@ -30,14 +30,14 @@ import ButtonToggleTheme from '@core/ButtonToggleTheme';
 					<li>
 						<a
 							href="/"
-							class="block p-3 md:p-0 rounded text-sw-coal-400 hover:text-sw-navy"
+							class="block p-3 md:p-0 rounded text-sw-coal-400 hover:text-sw-navy dark:text-white dark:hover:text-sw-flamingo"
 							aria-current="page">Início</a
 						>
 					</li>
 					<li>
 						<a
 							href="/projects"
-							class="block p-3 md:p-0 rounded text-sw-coal-400 hover:text-sw-navy"
+							class="block p-3 md:p-0 rounded text-sw-coal-400 hover:text-sw-navy dark:text-white dark:hover:text-sw-flamingo"
 							>Projetos</a
 						>
 					</li>
@@ -55,14 +55,14 @@ import ButtonToggleTheme from '@core/ButtonToggleTheme';
 			<li>
 				<a
 					href="/"
-					class="block p-3 md:p-0 rounded text-sw-coal-400 hover:text-sw-navy"
+					class="block p-3 md:p-0 rounded text-sw-coal-400 hover:text-sw-navy dark:text-white dark:hover:text-sw-flamingo"
 					aria-current="page">Início</a
 				>
 			</li>
 			<li>
 				<a
 					href="/projects"
-					class="block p-3 md:p-0 rounded text-sw-coal-400 hover:text-sw-navy"
+					class="block p-3 md:p-0 rounded text-sw-coal-400 hover:text-sw-navy dark:text-white dark:hover:text-sw-flamingo"
 					>Projetos</a
 				>
 			</li>
