--- a/src/components/widgets/Team.astro
+++ b/src/components/widgets/Team.astro
@@ -14,7 +14,8 @@ const { ...props } = Astro.props as Props;
 			<span>Quem somos</span>
 		</h2>
 		<h3 class="mb-18">
-			<span class="text-gradient bg-gradient-to-t from-sw-navy-700 to-sw-flamingo">Essa é a nossa tripulação</span>
+			<span class="text-gradient bg-gradient-to-t from-sw-navy-700 to-sw-flamingo">Essa é a nossa tripulação</span
+			>
 		</h3>
 	</header>
 
@@ -23,7 +24,20 @@ const { ...props } = Astro.props as Props;
 			client:visible
 			name="Alexandre Barbosa"
 			roles={['Generalista de Áudio']}
-			skills={['Composição', 'Prod. Musical', 'SFX']}
+			skills={[
+				{
+					name: 'Composição',
+					tooltip: 'Composição Musical',
+				},
+				{
+					name: 'Prod. Musical',
+					tooltip: 'Produção Musical',
+				},
+				{
+					name: 'SFX',
+					tooltip: 'Sound Effects',
+				},
+			]}
 			links={{
 				imdb: 'https://www.imdb.com/name/nm11223910/',
 				linkedin: 'https://www.linkedin.com/in/alexandre-barbosa-083b83b4/',
@@ -31,12 +45,28 @@ const { ...props } = Astro.props as Props;
 			}}
 			photoSrc="/images/team/alex_profile.webp"
 		/>
-
 		<TeamCard
 			client:visible
 			name="Danilo Nobre"
 			roles={['Generalista 3D']}
-			skills={['Modelagem 3D', 'Texturização', 'Rigging', 'Animação']}
+			skills={[
+				{
+					name: 'Modelagem 3D',
+					tooltip: 'Modelagem 3D',
+				},
+				{
+					name: 'Texturização',
+					tooltip: 'Texturização',
+				},
+				{
+					name: 'Rigging',
+					tooltip: 'Rigging',
+				},
+				{
+					name: 'Animação',
+					tooltip: 'Animação',
+				},
+			]}
 			links={{
 				linkedin: 'https://www.linkedin.com/in/danilo-nobre/',
 			}}
@@ -47,7 +77,16 @@ const { ...props } = Astro.props as Props;
 			client:visible
 			name="Gustavo Arantes"
 			roles={['Generalista 2D']}
-			skills={['Concept Art', 'Ilustração']}
+			skills={[
+				{
+					name: 'Concept Art',
+					tooltip: 'Concept Art',
+				},
+				{
+					name: 'Ilustração',
+					tooltip: 'Ilustração',
+				},
+			]}
 			links={{
 				linkedin: 'https://www.linkedin.com/in/gustav-arantes/',
 				portfolio: 'https://gustavarantes.myportfolio.com/',
@@ -59,7 +98,16 @@ const { ...props } = Astro.props as Props;
 			client:visible
 			name="Rhayane Miranda"
 			roles={['Social Media']}
-			skills={['Criação', 'Analytics']}
+			skills={[
+				{
+					name: 'Conteudista',
+					tooltip: 'Criação de conteúdo para redes sociais',
+				},
+				{
+					name: 'Analytics',
+					tooltip: 'Analytics',
+				},
+			]}
 			links={{
 				linkedin: 'https://www.linkedin.com/in/rhayane-miranda/',
 			}}
@@ -70,7 +118,20 @@ const { ...props } = Astro.props as Props;
 			client:visible
 			name="William Magalhães"
 			roles={['Programador Full Stack']}
-			skills={['Backend', 'Frontend', 'Tech Artist']}
+			skills={[
+				{
+					name: 'Backend',
+					tooltip: 'Backend',
+				},
+				{
+					name: 'Frontend',
+					tooltip: 'Frontend',
+				},
+				{
+					name: 'Tech Artist',
+					tooltip: 'Tech Artist',
+				},
+			]}
 			links={{
 				github: 'https://github.com/wbmagalhaes/',
 				linkedin: 'https://www.linkedin.com/in/william-bernardes-magalhaes/',
