--- a/src/pages/projects/[slug].astro
+++ b/src/pages/projects/[slug].astro
@@ -4,7 +4,7 @@ import { getSlugFromURL } from '@core/Path';
 import type { MetaSEO } from 'types/metaseo';
 
 export async function getStaticPaths() {
-	const all = await Astro.glob('../../data/projects/**/*.mdx');
+	const all = await Astro.glob('../../data/projects/*.md');
 	return all.map(({ file, ...page }) => {
 		const slug = getSlugFromURL(file);
 
