--- a/src/components/core/MetaTags.astro
+++ b/src/components/core/MetaTags.astro
@@ -50,7 +50,7 @@ const {
 <meta name="google-site-verification" content={SITE.googleSiteVerificationId} />
 
 <!-- Google Tag Manager -->
-<script type="text/partytown" client:idle define:vars={{ googleTagId: SITE.googleTagId }};>
+<script type="text/partytown" client:idle>
 
 	(function (w, d, s, l, i) {
 		w[l] = w[l] || [];
@@ -61,6 +61,6 @@ const {
 		j.async = true;
 		j.src = 'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
 		f.parentNode.insertBefore(j, f);
-	})(window, document, 'script', 'dataLayer', googleTagId);
+	})(window, document, 'script', 'dataLayer', 'GTM-KH6DHDG');
 </script>
 <!-- End Google Tag Manager -->
