--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -31,7 +31,7 @@ const { meta } = Astro.props as Props;
 		<!-- Google Tag Manager (noscript) -->
 		<noscript
 			><iframe
-				src={"https://www.googletagmanager.com/ns.html?id=" + SITE.googleTagId}
+				src={"https://www.googletagmanager.com/ns.html?id=GTM-KH6DHDG"}
 				height="0"
 				width="0"
 				style="display:none;visibility:hidden"></iframe>
