--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -12,6 +12,7 @@ import Footer from '@widgets/Footer.astro';
 import Scripts from '@core/Scripts.astro';
 
 import type { MetaSEO } from 'types/metaseo';
+import { SITE } from '@/config.mjs';
 
 type Props = {
 	meta?: MetaSEO;
