--- a/src/components/core/MetaTags.astro
+++ b/src/components/core/MetaTags.astro
@@ -50,7 +50,7 @@ const {
 <meta name="google-site-verification" content={SITE.googleSiteVerificationId} />
 
 <!-- Google Tag Manager -->
-<script type="text/partytown">
+<script type="text/partytown" is:inline>
 	(function (w, d, s, l, i) {
 		w[l] = w[l] || [];
 		w[l].push({ 'gtm.start': new Date().getTime(), event: 'gtm.js' });
