page layout fixes

--- a/src/components/atoms/dividers/DividerArrowDown.astro
+++ b/src/components/atoms/dividers/DividerArrowDown.astro
@@ -7,7 +7,7 @@ const { ...props } = Astro.props as Props;
 ---
 
 <div {...props}>
-	<div class="relative w-full top-0">
+	<div class="relative top-0">
 		<svg
 			class="mx-auto left-0 right-0"
 			xmlns="http://www.w3.org/2000/svg"
