--- a/src/components/widgets/Hero.astro
+++ b/src/components/widgets/Hero.astro
@@ -3,7 +3,7 @@ import DividerWave from '@atoms/dividers/DividerWave.astro';
 import HeroCanvas from '@atoms/HeroCanvas';
 ---
 
-<section class="min-h-screen">
+<section >
 	<div class="relative">
 		<DividerWave class="spacewiz__fill--reversed bottom-0" />
 		<img width="1080" class="block md:hidden w-screen cover aspect-ratio-16/9" src="/images/hero_sm.webp" title="Space Wizard Studios banner" alt="Space Wizard Studios banner of our female mascot floating in space dressed in her astronaut suit and wearing a large wizard hat. She is looking at the stars with a big smile. Behind her is her spaceship." />
