--- a/src/layouts/PageLayout.astro
+++ b/src/layouts/PageLayout.astro
@@ -14,7 +14,7 @@ const { meta } = Astro.props as Props;
 
 <Layout {meta}>
 	<div class="min-h-screen spacewiz__container">
-		<div class="pb-8 h-full bg-sw-secondary-700 dark:bg-sw-primary-700">
+		<div class="pb-8 min-h-screen bg-sw-secondary-700 dark:bg-sw-primary-700">
 			<main class="px-8">
 				<slot />
 			</main>
