--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -40,7 +40,7 @@ const { meta } = Astro.props as Props;
 
 		<Header />
 
-		<main class="overflow-x-hidden min-h-[100vh]">
+		<main class="min-h-screen overflow-x-hidden">
 			<slot />
 		</main>
 
