--- a/src/layouts/PoliciesPageLayout.astro
+++ b/src/layouts/PoliciesPageLayout.astro
@@ -6,8 +6,12 @@ import DividerArrowDown from '@atoms/dividers/DividerArrowDown.astro';
 ---
 
 <Layout>
-	<main>
-		<slot />
-		<DividerArrowDown class="fill-sw-secondary-200 dark:fill-sw-primary-700 bg-sw-coal-500" />
-	</main>
+	<div class="min-h-screen spacewiz__container policy">
+		<div class="pb-8 min-h-screen bg-sw-secondary-700 dark:bg-sw-primary-700">
+			<main class="px-8">
+				<slot />
+			</main>
+		</div>
+	</div>
+	<DividerArrowDown class="fill-sw-secondary-200 dark:fill-sw-primary-700 bg-sw-coal-500" />
 </Layout>
