--- a/src/layouts/ProjectLayout.astro
+++ b/src/layouts/ProjectLayout.astro
@@ -27,14 +27,14 @@ const { meta, heroSrc, heroTitle, heroAltText, carousel, partners } = Astro.prop
 
 <Layout {meta}>
 	<div class="min-h-screen spacewiz__container project">
-		<div class="pb-8 h-full bg-sw-secondary-200 dark:bg-sw-primary-700">
+		<div class="pb-8 min-h-screen bg-sw-secondary-700 dark:bg-sw-primary-700">
 			{heroSrc && <ProjectHero heroSrc={heroSrc} heroTitle={heroTitle} heroAltText={heroAltText} />}
 			<article class="px-8">
-				<slot />
+				<slot/>
 			</article>
 			{!!carousel?.length && <ProjectCarousel images={carousel} class="px-8" />}
 			{!!partners?.length && <ProjectPartners partners={partners} class="px-8" />}
 		</div>
 	</div>
-	<DividerArrowDown class="fill-sw-secondary-200 dark:fill-sw-primary-700 bg-sw-coal-500" />
+	<DividerArrowDown class="w-full fill-sw-secondary-200 dark:fill-sw-primary-700 bg-sw-coal-500" />
 </Layout>
