--- a/src/layouts/PoliciesPageLayout.astro
+++ b/src/layouts/PoliciesPageLayout.astro
@@ -1,12 +1,10 @@
 ---
-import '@styles/policy.scss';
-
 import Layout from '@layouts/BaseLayout.astro';
 import DividerArrowDown from '@atoms/dividers/DividerArrowDown.astro';
 ---
 
 <Layout>
-	<div class="min-h-screen spacewiz__container policy">
+	<div class="min-h-screen spacewiz__container">
 		<div class="pb-8 min-h-screen bg-sw-secondary-700 dark:bg-sw-primary-700">
 			<main class="px-8">
 				<slot />
