--- a/src/layouts/ProjectLayout.astro
+++ b/src/layouts/ProjectLayout.astro
@@ -1,6 +1,4 @@
 ---
-import '@styles/project.scss';
-
 import Layout from '@layouts/BaseLayout.astro';
 
 import ProjectHero from '@widgets/projects/ProjectHero.astro';
@@ -26,7 +24,7 @@ const { meta, heroSrc, heroTitle, heroAltText, carousel, partners } = Astro.prop
 ---
 
 <Layout {meta}>
-	<div class="min-h-screen spacewiz__container project">
+	<div class="min-h-screen spacewiz__container">
 		<div class="pb-8 min-h-screen bg-sw-secondary-700 dark:bg-sw-primary-700">
 			{heroSrc && <ProjectHero heroSrc={heroSrc} heroTitle={heroTitle} heroAltText={heroAltText} />}
 			<article class="px-8">
