--- a/src/components/widgets/projects/ProjectCarousel.astro
+++ b/src/components/widgets/projects/ProjectCarousel.astro
@@ -16,6 +16,6 @@ const { images, ...props } = Astro.props as Props;
 ---
 
 <figure {...props}>
-	<h2>Galeria</h2>
+	<h2 class="py-4 spacewiz__text--accent">Galeria</h2>
 	<SimpleCarousel images={images} client:visible />
 </figure>
