--- a/src/pages/policies/[slug].astro
+++ b/src/pages/policies/[slug].astro
@@ -2,6 +2,8 @@
 import Layout from '@layouts/PoliciesPageLayout.astro';
 import { getSlugFromURL } from '@core/Path';
 
+import { components } from '@widgets/policies/components/Components.astro';
+
 export async function getStaticPaths() {
 	const all = await Astro.glob('../../data/policies/*.mdx');
 	return all.map(({ file, ...page }) => {
@@ -24,5 +26,5 @@ const { page } = Astro.props;
 ---
 
 <Layout>
-	<page.Content />
+	<page.Content components={components} />
 </Layout>
