astro 2.0, partytown fix, mdx layout fix (#88)
* migrar para o astro 2.0 e atualizar dependencias (#87)

* migrar para o astro 2.0 e atualizar dependencias
Fixes #86

* google tag

* partytown debug

* removal client:idle

* google tag id from config.mjs

* page layout fixes

* mdx style fix

* minor fixes

* client:idle

* Fixes #77

* limpo

* gtm,hs

* gtm.js

* tag id

--- a/src/pages/policies/[slug].astro
+++ b/src/pages/policies/[slug].astro
@@ -2,6 +2,8 @@
 import Layout from '@layouts/PoliciesPageLayout.astro';
 import { getSlugFromURL } from '@core/Path';
 
+import { components } from '@widgets/policies/components/Components.astro';
+
 export async function getStaticPaths() {
 	const all = await Astro.glob('../../data/policies/*.mdx');
 	return all.map(({ file, ...page }) => {
@@ -24,11 +26,5 @@ const { page } = Astro.props;
 ---
 
 <Layout>
-	<div class="min-h-screen spacewiz__container policy">
-		<div class="pb-8 h-full bg-sw-secondary-200 dark:bg-sw-primary-700">
-			<article class="px-4 md:px-8">
-				<page.Content />
-			</article>
-		</div>
-	</div>
+	<page.Content components={components} />
 </Layout>
