--- a/src/components/core/MetaTags.astro
+++ b/src/components/core/MetaTags.astro
@@ -50,5 +50,5 @@ const {
 <meta name="google-site-verification" content={SITE.googleSiteVerificationId} />
 
 <!-- Google Tag Manager -->
-<script type="text/partytown" src="./GoogleTagManager.js"></script>
+<script type="text/partytown" src="./GoogleTagManager.js" client:idle></script>
 <!-- End Google Tag Manager -->
