--- a/src/pages/projects/[category].astro
+++ b/src/pages/projects/[category].astro
@@ -5,25 +5,43 @@ import { getSlugFromURL } from '@core/Path';
 import { SITE } from '@/config.mjs';
 import type { MetaSEO } from 'types/metaseo';
 
-async function getProjects() {
-	const all = (await Astro.glob('../../data/projects/**/*.mdx')).filter((page) => !page.frontmatter.draft);
+export async function getStaticPaths() {
+	const all = (await Astro.glob('../../data/projects/**/*.mdx'))
+		.filter((page) => !page.frontmatter.draft)
+		.filter((page) => page.frontmatter.category);
 
-	return all
-		.sort((pageA, pageB) => {
-			const dateA = new Date(pageA.frontmatter.date).getTime();
-			const dateB = new Date(pageB.frontmatter.date).getTime();
-			return dateB - dateA;
-		})
-		.map(({ file, ...page }) => ({
+	const categorized = {};
+	all.forEach(({ file, ...page }) => {
+		const category = page.frontmatter.category;
+
+		if (!categorized[category]) {
+			categorized[category] = [];
+		}
+
+		categorized[category].push({
 			slug: getSlugFromURL(file),
 			...page,
-		}));
+		});
+	});
+
+	return Object.keys(categorized).map((category) => {
+		return {
+			params: {
+				category: category.toLowerCase(),
+			},
+
+			props: {
+				category: category,
+				projects: categorized[category],
+			},
+		};
+	});
 }
 
-const projects = await getProjects();
+const { category, projects } = Astro.props;
 
 const meta: MetaSEO = {
-	title: 'Projetos - spacewiz.dev',
+	title: `Portifolio - ${category}`,
 	description: SITE.description,
 	canonical: Astro.url.toString(),
 	ogType: 'website',
@@ -31,7 +49,7 @@ const meta: MetaSEO = {
 ---
 
 <Layout {meta}>
-	<h1 class="pt-4">Projetos</h1>
+	<h1>Projetos: {category}</h1>
 	<section class="my-8 grid grid-cols-1 md:grid-cols-3 gap-4 md:gap-8 content-around">
 		{
 			projects.map((page) => (
