--- a/src/layouts/PageLayout.astro
+++ b/src/layouts/PageLayout.astro
@@ -12,7 +12,7 @@ type Props = {
 const { meta } = Astro.props as Props;
 ---
 
-<Layout {meta}>
+<Layout meta={meta}>
 	<div class="min-h-screen spacewiz__container">
 		<div class="pb-8 min-h-screen bg-sw-secondary-700 dark:bg-sw-primary-700">
 			<main class="px-8">
