--- a/src/layouts/HomeLayout.astro
+++ b/src/layouts/HomeLayout.astro
@@ -12,7 +12,7 @@ type Props = {
 const { meta } = Astro.props as Props;
 ---
 
-<Layout {meta}>
+<Layout meta={meta}>
 	<Hero />
 	<main>
 		<slot />
