--- a/src/layouts/ProjectLayout.astro
+++ b/src/layouts/ProjectLayout.astro
@@ -23,7 +23,7 @@ type Props = {
 const { meta, heroSrc, heroTitle, heroAltText, carousel, partners } = Astro.props as Props;
 ---
 
-<Layout {meta}>
+<Layout meta={meta}>
 	<div class="min-h-screen spacewiz__container">
 		<div class="pb-8 min-h-screen bg-sw-secondary-200 dark:bg-sw-primary-700">
 			{heroSrc && <ProjectHero heroSrc={heroSrc} heroTitle={heroTitle} heroAltText={heroAltText} />}
