--- a/src/pages/projects/[slug].astro
+++ b/src/pages/projects/[slug].astro
@@ -32,7 +32,7 @@ const meta: MetaSEO = {
 ---
 
 <Layout
-	{meta}
+	meta={meta}
 	heroSrc={page.frontmatter.heroSrc}
 	heroTitle={page.frontmatter.heroTitle}
 	heroAltText={page.frontmatter.heroAltText}
