--- a/src/pages/projects/index.astro
+++ b/src/pages/projects/index.astro
@@ -31,7 +31,7 @@ const meta: MetaSEO = {
 };
 ---
 
-<Layout {meta}>
+<Layout meta={meta}>
 	<h1 class="pt-4">Projetos</h1>
 	<section class="my-8 grid grid-cols-1 md:grid-cols-3 gap-4 md:gap-8 content-around">
 		{
