--- a/src/components/widgets/Hero.astro
+++ b/src/components/widgets/Hero.astro
@@ -1,13 +1,39 @@
 ---
 import DividerWave from '@atoms/dividers/DividerWave.astro';
+
+import { SITE } from '@/config.mjs';
+
 import HeroCanvas from '@atoms/HeroCanvas';
 ---
 
-<section >
-	<div class="relative">
-		<DividerWave class="spacewiz__fill--reversed bottom-0" />
-		<img width="1080" class="block md:hidden w-screen cover aspect-ratio-16/9" src="/images/hero_sm.webp" title="Space Wizard Studios banner" alt="Space Wizard Studios banner of our female mascot floating in space dressed in her astronaut suit and wearing a large wizard hat. She is looking at the stars with a big smile. Behind her is her spaceship." />
-		<img width="1920" class="hidden md:block w-screen cover aspect-ratio-[9/16]" src="/images/hero_md.webp" title="Space Wizard Studios banner" alt="Space Wizard Studios banner of our female mascot floating in space dressed in her astronaut suit and wearing a large wizard hat. She is looking at the stars with a big smile. Behind her is her spaceship." />
+<section>
+	<div class="flex flex-col relative h-screen">
+
+		<DividerWave class="absolute w-full h-screen bottom-0 spacewiz__fill--reversed" />
+
+		<main class="absolute flex flex-col self-center spacewiz__container h-screen justify-start md:justify-center">
+			<div class="w-full md:w-1/3 mt-8 p-8 top-0 rounded-lg text-white text-shadow-sm shadow-black bg-sw-primary/80">
+				<h1 class="font-bold">Sua história, <br> nossa magia</h1>
+				<p class="mt-8">{SITE.description}</p>
+			</div>
+		</main>
+
+		<img
+			width="1080"
+			height="100vh"
+			class="block md:hidden w-screen h-screen object-cover"
+			src="/images/hero_sm.webp"
+			title="Space Wizard Studios banner"
+			alt="Space Wizard Studios banner of our female mascot floating in space dressed in her astronaut suit and wearing a large wizard hat. She is looking at the stars with a big smile. Behind her is her spaceship."
+		/>
+		<img
+			width="1920"
+			height="100vh"
+			class="hidden md:block w-screen h-screen top-0 object-cover"
+			src="/images/hero_md.webp"
+			title="Space Wizard Studios banner"
+			alt="Space Wizard Studios banner of our female mascot floating in space dressed in her astronaut suit and wearing a large wizard hat. She is looking at the stars with a big smile. Behind her is her spaceship."
+		/>
 	</div>
 
 	<!-- <figure class="absolute top-0 right-0 w-full h-full"> -->
