--- a/src/components/widgets/policies/components/H1.astro
+++ b/src/components/widgets/policies/components/H1.astro
@@ -2,6 +2,6 @@
 const props = Astro.props;
 ---
 
-<h1 class="text-center md:text-left py-4" {...props}>
+<h1 class="text-4xl font-black uppercase text-center md:text-left py-4" {...props}>
 	<slot />
 </h1>
