--- a/src/components/widgets/projects/components/H1.astro
+++ b/src/components/widgets/projects/components/H1.astro
@@ -2,6 +2,6 @@
 const props = Astro.props;
 ---
 
-<h1 class="pt-8 text-center" {...props}>
+<h1 class="pt-8 text-center text-4xl font-black uppercase" {...props}>
 	<slot />
 </h1>
