--- a/src/pages/projects/[category].astro
+++ b/src/pages/projects/[category].astro
@@ -46,7 +46,7 @@ const meta: MetaSEO = {
 ---
 
 <Layout {meta}>
-	<h1>Projetos: {category}</h1>
+	<h1 class="pt-4 text-4xl font-black uppercase">Projetos: {category}</h1>
 	<section class="my-8 grid grid-cols-1 md:grid-cols-3 gap-4 md:gap-8 content-around">
 		{
 			projects.map((page: any) => (
