--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -98,7 +98,7 @@
 		}
 
 		&__container {
-			@apply max-w-6xl mx-auto px-6 md:px-8;
+			@apply max-w-6xl mx-auto px-4 md:px-8;
 		}
 
 		&__decoration {
@@ -107,6 +107,30 @@
 			&--reversed {
 				@apply decoration-sw-flamingo;
 			}
+		}
+	}
+}
+
+@layer utilities {
+	@variants responsive {
+		.text-shadow-none {
+			text-shadow: none;
+		}
+
+		.text-shadow-sm {
+			text-shadow: 1px 1px 2px var(--tw-shadow-color);
+		}
+
+		.text-shadow {
+			text-shadow: 2px 2px 4px var(--tw-shadow-color);
+		}
+
+		.text-shadow-md {
+			text-shadow: 4px 4px 8px var(--tw-shadow-color);
+		}
+
+		.text-shadow-lg {
+			text-shadow: 15px 15px 30px var(--tw-shadow-color);
 		}
 	}
 }
