--- a/src/components/core/MetaTags.astro
+++ b/src/components/core/MetaTags.astro
@@ -24,6 +24,7 @@ const {
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <link rel="icon" href="/favicon.svg" sizes="any" type="image/svg+xml" />
+<link rel="sitemap" href="/sitemap-index.xml">
 
 <AstroSeo
 	title={title}
