hotfix description hero

--- a/src/components/widgets/Hero.astro
+++ b/src/components/widgets/Hero.astro
@@ -23,16 +23,14 @@ import HeroCanvas from '@atoms/HeroCanvas';
 			height="100vh"
 			class="block md:hidden w-screen h-screen object-cover"
 			src="/images/hero_sm.webp"
-			title="Space Wizard Studios banner"
-			alt="Space Wizard Studios banner of our female mascot floating in space dressed in her astronaut suit and wearing a large wizard hat. She is looking at the stars with a big smile. Behind her is her spaceship."
+			alt="Banner da nossa mascote feminina flutuando no espaço vestida com seu traje de astronauta e usando um grande chapéu de mago. Ela está olhando para as estrelas com um grande sorriso. Atrás dela está sua nave espacial."
 		/>
 		<img
 			width="1920"
 			height="100vh"
 			class="hidden md:block w-screen h-screen top-0 object-cover"
 			src="/images/hero_md.webp"
-			title="Space Wizard Studios banner"
-			alt="Space Wizard Studios banner of our female mascot floating in space dressed in her astronaut suit and wearing a large wizard hat. She is looking at the stars with a big smile. Behind her is her spaceship."
+			alt="Banner da nossa mascote feminina flutuando no espaço vestida com seu traje de astronauta e usando um grande chapéu de mago. Ela está olhando para as estrelas com um grande sorriso. Atrás dela está sua nave espacial."
 		/>
 	</div>
 
