hotfix menu colors and size

--- a/src/components/widgets/Header.astro
+++ b/src/components/widgets/Header.astro
@@ -40,7 +40,7 @@ const menus = [
 ---
 
 <header class="sticky top-0 z-40 w-full md:backdrop-blur-sm shadow-md bg-sw-secondary/95 dark:bg-sw-primary/95">
-	<nav class="flex w-full h-16 lg:h-28 justify-center items-center">
+	<nav class="flex w-full h-14 justify-center items-center">
 		<div class="flex w-full spacewiz__container items-center justify-between">
 			<a class="w-48 spacewiz__fill" href="/" title="Space Wizard Studios">
 				<span class="sr-only">Space Wizard Studios</span>
