--- a/src/components/widgets/Hero.astro
+++ b/src/components/widgets/Hero.astro
@@ -8,12 +8,13 @@ import HeroCanvas from '@atoms/HeroCanvas';
 
 <section>
 	<div class="flex flex-col relative h-screen">
-
 		<DividerWave class="absolute w-full h-screen bottom-0 spacewiz__fill--reversed" />
 
 		<main class="absolute flex flex-col self-center spacewiz__container h-screen justify-start md:justify-center">
-			<div class="w-full md:w-1/3 mt-8 p-8 top-0 rounded-lg text-white text-shadow-sm shadow-black bg-sw-primary/80">
-				<h1 class="font-bold">Sua história, <br> nossa magia</h1>
+			<div
+				class="w-full md:w-1/3 mt-8 p-8 top-0 rounded-lg text-white text-shadow-sm shadow-black bg-sw-primary/80"
+			>
+				<h1 class="font-bold">Sua história, <br /> nossa magia</h1>
 				<p class="mt-8">{SITE.description}</p>
 			</div>
 		</main>
@@ -23,14 +24,14 @@ import HeroCanvas from '@atoms/HeroCanvas';
 			height="100vh"
 			class="block md:hidden w-screen h-screen object-cover"
 			src="/images/hero_sm.webp"
-			alt="Banner da nossa mascote feminina flutuando no espaço vestida com seu traje de astronauta e usando um grande chapéu de mago. Ela está olhando para as estrelas com um grande sorriso. Atrás dela está sua nave espacial."
+			alt="Banner da nossa mascote no espaço, vestindo seu traje de astronauta e usando um grande chapéu de mago. Ela está olhando para as estrelas e sorrindo."
 		/>
 		<img
 			width="1920"
 			height="100vh"
 			class="hidden md:block w-screen h-screen top-0 object-cover"
 			src="/images/hero_md.webp"
-			alt="Banner da nossa mascote feminina flutuando no espaço vestida com seu traje de astronauta e usando um grande chapéu de mago. Ela está olhando para as estrelas com um grande sorriso. Atrás dela está sua nave espacial."
+			alt="Banner da nossa mascote no espaço, vestindo seu traje de astronauta e usando um grande chapéu de mago. Ela está olhando para as estrelas e sorrindo."
 		/>
 	</div>
 
