update collection path

--- a/src/pages/privacy.astro
+++ b/src/pages/privacy.astro
@@ -1,7 +1,7 @@
 ---
 import Layout from '@layouts/PoliciesPageLayout.astro';
 import { components } from '@widgets/policies/components/Components.astro';
-import Privacy from '@data/policies/privacy.md';
+import Privacy from '@collections/policies/privacy.md';
 ---
 
 <Layout>
