--- a/src/pages/terms.astro
+++ b/src/pages/terms.astro
@@ -1,7 +1,7 @@
 ---
 import Layout from '@layouts/PoliciesPageLayout.astro';
 import { components } from '@widgets/policies/components/Components.astro';
-import Terms from '@data/policies/terms.md';
+import Terms from '@collections/policies/terms.md';
 ---
 
 <Layout>
