--- a/src/pages/admin/index.astro
+++ b/src/pages/admin/index.astro
@@ -5,8 +5,9 @@ import { CMSPage } from '@components/cms/CMSPage';
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta charset="utf-8" />
+		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="icon" href="/favicon.svg" sizes="any" type="image/svg+xml" />
 		<title>SpaceWizard: Admin</title>
 	</head>
 
