changing folders: atoms and core into common

--- a/src/components/widgets/Hero.astro
+++ b/src/components/widgets/Hero.astro
@@ -1,7 +1,7 @@
 ---
 import DividerWave from '@atoms/dividers/DividerWave.astro';
 
-import { SITE } from '@/config.mjs';
+import { SITE } from '@config.js';
 
 import HeroCanvas from '@atoms/HeroCanvas';
 ---
