--- a/src/components/common/MetaTags.astro
+++ b/src/components/common/MetaTags.astro
@@ -1,7 +1,7 @@
 ---
 import { AstroSeo } from '@astrolib/seo';
 import { MetaSEO } from 'types/metaseo';
-import { SITE } from '@/config.mjs';
+import { SITE } from '@config.js';
 
 export interface Props extends MetaSEO {
 	dontUseTitleTemplate?: boolean;
