updating config file

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -12,7 +12,7 @@ import Footer from '@widgets/Footer.astro';
 import Scripts from '@core/Scripts.astro';
 
 import type { MetaSEO } from 'types/metaseo';
-import { SITE } from '@/config.mjs';
+import { SITE } from '@config.js';
 
 type Props = {
 	meta?: MetaSEO;
