--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,6 +1,6 @@
 ---
 import Layout from '@layouts/BaseLayout.astro';
-import { SITE } from '@/config.mjs';
+import { SITE } from '@config.js';
 import Error404 from '@widgets/Error404.astro';
 const title = `Error 404 — ${SITE.name}`;
 ---
