--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ import Team from '@widgets/Team.astro';
 
 import DividerRect from '@atoms/dividers/DividerRect.astro';
 
-import { SITE } from '@/config.mjs';
+import { SITE } from '@config.js';
 import type { MetaSEO } from 'types/metaseo';
 
 const meta: MetaSEO = {
