--- a/src/pages/projects/[category].astro
+++ b/src/pages/projects/[category].astro
@@ -2,7 +2,7 @@
 import Layout from '@layouts/PageLayout.astro';
 import { getSlugFromURL } from '@core/Path';
 
-import { SITE } from '@/config.mjs';
+import { SITE } from '@config.js';
 import type { MetaSEO } from 'types/metaseo';
 
 export async function getStaticPaths() {
